--- a/src/styles/global/helpers.scss
+++ b/src/styles/global/helpers.scss
@@ -102,6 +102,10 @@
 .fixed {
   position: fixed;
 }
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
 
 // Margin & Padding
 .no-margin {
@@ -123,8 +127,8 @@
   .xl-v-middle { vertical-align: middle; }
   .xl-v-top { vertical-align: top; }
   .xl-v-bottom { vertical-align: bottom; }
-  .xl-show { display: block; }
   .l-show, .m-show, .s-show { display: none !important; }
+  .xl-show { display: block !important; }
 }
 @include l() {
   .l-flex { @include flex(); }
@@ -135,8 +139,8 @@
   .l-v-middle { vertical-align: middle; }
   .l-v-top { vertical-align: top; }
   .l-v-bottom { vertical-align: bottom; }
-  .l-show { display: block; }
   .xl-show, .m-show, .s-show { display: none !important; }
+  .l-show { display: block !important; }
 }
 @include m() {
   .m-flex { @include flex(); }
@@ -147,8 +151,8 @@
   .m-v-middle {   vertical-align: middle; }
   .m-v-top { vertical-align: top; }
   .m-v-bottom { vertical-align: bottom; }
-  .m-show { display: block; }
   .xl-show, .l-show, .s-show { display: none !important; }
+  .m-show { display: block !important; }
 }
 @include s() {
   .s-flex { @include flex(); }
@@ -159,6 +163,6 @@
   .s-v-middle { vertical-align: middle; }
   .s-v-top { vertical-align: top; }
   .s-v-bottom { vertical-align: bottom; }
-  .s-show { display: block; }
   .xl-show, .l-show, .m-show { display: none !important; }
+  .s-show { display: block !important; }
 }
