--- a/docs/_sass/_grid.scss
+++ b/docs/_sass/_grid.scss
@@ -28,7 +28,9 @@
 // Rows
 
 .row {
-  margin: 0 (-$gutter/2) $gutter;
+  margin-left: -$gutter/2;
+  margin-right: -$gutter/2;
+
   // Table Grid
   &.table { @include table(); }
   &.xl-table { @include xl() { @include table(); } }
@@ -43,17 +45,18 @@
   &.m-reverse { @include m() { @include reverse(); } }
   &.s-reverse { @include s() { @include reverse(); } }
 
+  // Collapsed Grid
+  &.collapse { @include collapse(); }
+  &.xl-collapse { @include xl() { @include collapse(); } }
+  &.l-collapse { @include l() { @include collapse(); } }
+  &.m-collapse { @include m() { @include collapse(); } }
+  &.s-collapse { @include s() { @include collapse(); } }
+
   // Standard Grid
   &:after {
     content: "";
     display: table;
     clear: both;
-  }
-  &.collapse {
-    margin: 0;
-    .column {
-      padding: 0;
-    }
   }
 
   // No bottom margin
@@ -61,12 +64,13 @@
 }
 
 // Column Grid
-
 .column {
   float: left;
   min-height: 0.125rem;
-  padding: 0 $gutter/2;
+  padding-left: $gutter/2;
+  padding-right: $gutter/2;
 }
+
 .l1 { width: percentage(1/12); }
 .l2 { width: percentage(2/12); }
 .l3 { width: percentage(3/12); }
@@ -79,8 +83,6 @@
 .l10 { width: percentage(10/12); }
 .l11 { width: percentage(11/12); }
 .l12 { width: 100%; }
-// Custom columns
-.lfifth { width: percentage(1/5); }
 @include m() {
   .m1 { width: percentage(1/12); }
   .m2 { width: percentage(2/12); }
@@ -94,8 +96,6 @@
   .m10 { width: percentage(10/12); }
   .m11 { width: percentage(11/12); }
   .m12 { width: 100%; }
-  // Custom columns
-  .mfifth { width: percentage(1/5); }
 }
 @include s() {
   .s1 { width: percentage(1/12); }
@@ -113,7 +113,6 @@
 }
 
 // Uniform Height Clearing
-
 .l2:nth-child(6n+1) { clear: both; }
 .l3:nth-child(4n+1) { clear: both; }
 .l4:nth-child(3n+1) { clear: both; }
@@ -168,67 +167,52 @@
   .column.s-clear { clear: both; }
 }
 
-// Flex Grid
-
-.flex {
-  @include flex();
-  @include box-orient--vertical();
-  @include flex-direction(column);
-  .row {
-    @include flex();
-    @include flex-direction(row);
-    .box {
-      margin: 0 $gutter/2 $gutter;
-      flex: auto;
-      align-self: center;
-      &:first-child {
-        margin-left: 0;
-      }
-      &:last-child {
-        margin-right: 0;
-      }
-      &.center {
-        text-align: center;
-        align-items: center;
-      }
-    }
-    @include s() {
-      @include flex-direction(column);
-      .box {
-        width: 100%;
-        margin: 0 0 $gutter;
-      }
-    }
-  }
-}
-
+// Breakpoint Specific
 @include xl() {
+  .xl-flex { @include flex(); }
   .xl-hide { display: none !important; }
   .xl-left { text-align: left; }
   .xl-center { text-align: center; }
   .xl-right { text-align: right; }
+  .xl-v-middle { vertical-align: middle; }
+  .xl-v-top { vertical-align: top; }
+  .xl-v-bottom { vertical-align: bottom; }
   .l-show, .m-show, .s-show { display: none !important; }
+  .xl-show { display: block !important; }
 }
 @include l() {
+  .l-flex { @include flex(); }
   .l-hide { display: none !important; }
   .l-left { text-align: left; }
   .l-center { text-align: center; }
   .l-right { text-align: right; }
+  .l-v-middle { vertical-align: middle; }
+  .l-v-top { vertical-align: top; }
+  .l-v-bottom { vertical-align: bottom; }
   .xl-show, .m-show, .s-show { display: none !important; }
+  .l-show { display: block !important; }
 }
 @include m() {
+  .m-flex { @include flex(); }
   .m-hide { display: none !important; }
   .m-left { text-align: left; }
   .m-center { text-align: center; }
   .m-right { text-align: right; }
-  .l-show { display: none !important; }
+  .m-v-middle {   vertical-align: middle; }
+  .m-v-top { vertical-align: top; }
+  .m-v-bottom { vertical-align: bottom; }
   .xl-show, .l-show, .s-show { display: none !important; }
+  .m-show { display: block !important; }
 }
 @include s() {
+  .s-flex { @include flex(); }
   .s-hide { display: none !important; }
   .s-left { text-align: left; }
   .s-center { text-align: center; }
   .s-right { text-align: right; }
-  .l-show { display: none !important; }
+  .s-v-middle { vertical-align: middle; }
+  .s-v-top { vertical-align: top; }
+  .s-v-bottom { vertical-align: bottom; }
   .xl-show, .l-show, .m-show { display: none !important; }
+  .s-show { display: block !important; }
 }
