--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -7,10 +7,10 @@
  \___/|__/| \_/|__/\__/  /\_/
                |\
                |/
-  Concrete v0.1
+  Concrete Docs
   https://elkfox.com
   https://experts.shopify.com/elkfox
-  Copyright 2015 Shopify Inc. & Elkfox Co Pty Ltd
+  Copyright 2018 Shopify Inc. & Elkfox Co Pty Ltd
 ============================================================================ -->
 <head>
   <!-- META ================================================== -->
@@ -28,6 +28,16 @@
   <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="{{ site.github.url }}/assets/js/scroll-spy.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121923985-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-121923985-3');
+  </script>
 </head>
 <body data-spy="scroll" data-target="#navbar-example" class="parallax" data-perspective="30">
   <div class="body-wrapper parallax" data-perspective="20">
