--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -13,6 +13,9 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+*::-moz-selection { background-color: rgba($colorHighlight, 0.75); }
+*::selection { background-color: rgba($colorHighlight, 0.75); }
+
 img {
   max-width: 100%;
 }
@@ -126,7 +129,7 @@ select {
   // IE & Edge placeholders
   &:-ms-input-placeholder
   &::-ms-input-placeholder {
-    
+
   }
   // Safari placeholders
   &::-webkit-textfield-decoration-container {
@@ -139,7 +142,7 @@ select {
     border: $borderWeight $borderStyle $colorBorder;
     border-radius: $borderRadius;
     -webkit-text-fill-color: $colorText;
-    -webkit-box-shadow: 0 0 0px $gutter*100 rgba($colorHighlight, 0.35) inset;
+    -webkit-box-shadow: 0 0 0px $gutter*100 rgba($colorAlternate, 0.35) inset;
   }
   // Select dropdown options for Firefox
   option {
@@ -218,6 +221,12 @@ input[type="reset"] {
   cursor: pointer;
   @include prefixer(appearance, none);
   @include transition();
+  &.small {
+    height: $gutter/2;
+    line-height: (($gutter/2) - $borderWeight*2);
+    padding: 0 $spacing;
+    font-size: $h6;
+  }
   &:hover {
     background-color: darken($colorBrand, $adjustAmount);
     border-color: darken($colorBrand, $adjustAmount);
