:sparkles: Product page clean up

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,7 +47,7 @@
 @import url('global/helpers.scss');
 
 /* Optional extras ===========================================================*/
-// @import url('utils/additional-helpers.scss');
+@import url('utils/additional-helpers.scss');
 
 /* =============================================================================
    Shopify core helpers
