--- a/src/styles/templates/cart.scss
+++ b/src/styles/templates/cart.scss
@@ -1,52 +1,35 @@
 /* Cart ======================================================================*/
 
+.template-cart {
+
+}
+
 .quantity-adjust {
-  margin-bottom: $gutter/2;
+  margin-bottom: $spacing*2;
   @include prefixer(user-select, none);
+  @include flex();
+  @include flex-align('items', 'center');
   .adjust {
-    display: inline-block;
     height: $gutter/1.5;
-    vertical-align: middle;
     line-height: $gutter/1.5 - $borderWeight*4;
-    font-size: 1.35rem;
+    border: $borderWeight $borderStyle transparent;
+    font-size: $h4;
     text-align: center;
     text-decoration: none;
     background-color: transparent;
-    border: $borderWeight $borderStyle transparent;
   }
-  .quantity, input#Quantity.quantity {
-    display: inline-block;
+  input[type="number"].quantity {
     width: $gutter/1.5;
     height: $gutter/1.5;
-    line-height: $gutter/1.5;
-    text-align: center;
+    line-height: $gutter/1.5 - ($borderWeight*2);
+    font-size: $p;
+    margin: 0 $spacing/2;
     padding: 0;
-    margin-bottom: 0;
-    background-color: lighten($colorBackground, 30%);
-    border-radius: $borderRadius;
-    border-color: lighten($colorBackground, 30%);
-    font-size: 1rem;
-    color: $colorText;
-    &[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+    text-align: center;
+    &[type=number]::-webkit-inner-spin-button,
+    [type=number]::-webkit-outer-spin-button {
       -webkit-appearance: none;
       margin: 0;
-    }
-  }
-  input#Quantity.quantity {
-    line-height: $gutter/1.5 - $borderRadius*2;
-    &[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-  }
-}
-
-
-.template-cart {
-  @include s() {
-    .product_title {
-      display: block;
-      margin-bottom: $gutter/2;
     }
   }
 }
