--- a/src/assets/styles/theme.scss.liquid
+++ b/src/assets/styles/theme.scss.liquid
@@ -7,25 +7,25 @@
 @import '~normalize.css/normalize';
 
 // Settings, mixins, Grid50 resets
-@import url('../global/variables.scss.liquid');
-@import url('../global/grid50.mixins.scss');
-@import url('../global/grid50.reset.scss');
+@import url('global/variables.scss.liquid');
+@import url('global/grid50.mixins.scss');
+@import url('global/grid50.reset.scss');
 
 // Basic typographic elements
-@import url('../global/typography.scss');
+@import url('global/typography.scss');
 
 // Grid50
-@import url('../global/grid50.scss');
-@import url('../global/grid50.flex.scss');
-@import url('../global/grid50.helpers.scss');
+@import url('global/grid50.scss');
+@import url('global/grid50.flex.scss');
+@import url('global/grid50.helpers.scss');
 
 // Take control of common elements
-@import url('../global/forms.scss');
-@import url('../global/media.scss');
-@import url('../global/social.scss');
+@import url('global/forms.scss');
+@import url('global/media.scss');
+@import url('global/social.scss');
 
 // Just for inspiration
-@import url('../global/animation.scss');
+@import url('global/animation.scss');
 
 /* Global ====================================================================*/
 
