--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -22,7 +22,7 @@ MIT License
 <head>
 {% include 'meta-general' %}
 {% include 'meta-social' %}
-{% include 'style-tags' %}
+{% include 'style-tags', layout: 'theme' %}
 {% include 'script-tags', layout: 'theme' %}
 {{ content_for_header }}
 </head>
