--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -1,5 +1,7 @@
 /* Product ===================================================================*/
 
 .template-product {
-
+  .form-item {
+    margin-bottom: $spacing*2;
+  }
 }
