--- a/src/assets/styles/tools/mixins.scss
+++ b/src/assets/styles/tools/mixins.scss
@@ -11,22 +11,22 @@
  *   }
  * }
  */
-@mixin media-query($media-query) {
-  $breakpoint-found: false;
-
-  @each $breakpoint in $breakpoints {
-    $name: nth($breakpoint, 1);
-    $declaration: nth($breakpoint, 2);
-
-    @if $media-query == $name and $declaration {
-      $breakpoint-found: true;
-
-      @media only screen and #{$declaration} {
-        @content;
-      }
-    }
-  }
-}
+// @mixin media-query($media-query) {
+//   $breakpoint-found: false;
+//
+//   @each $breakpoint in $breakpoints {
+//     $name: nth($breakpoint, 1);
+//     $declaration: nth($breakpoint, 2);
+//
+//     @if $media-query == $name and $declaration {
+//       $breakpoint-found: true;
+//
+//       @media only screen and #{$declaration} {
+//         @content;
+//       }
+//     }
+//   }
+// }
 
 /**
  * Outputs list of transition properties
