--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 /**
- * [replace with theme name] | Built with Slate
+ * Concrete | Built with Slate
  */
 @import '~normalize.css/normalize';
 
@@ -10,30 +10,34 @@
 
 // Tools
 @import './tools/mixins';
-@import './tools/functions';
+// @import './tools/functions';
 
 // Core
-@import './core/forms';
+@import './core/grid50.reset';
+@import './core/grid50';
+@import './core/grid50.helpers';
+@import './core/grid50.typography';
+// @import './core/forms';
 @import './core/helpers';
-@import './core/layout';
+// @import './core/layout';
 @import './core/media';
-@import './core/responsive-tables';
+// @import './core/responsive-tables';
 @import './core/rte';
 @import './core/typography';
-
-// Components
-@import './components/buttons';
-@import './components/hero-banner';
-@import './components/icons';
-@import './components/placeholders';
-@import './components/responsive-images';
-
-// Sections
-@import './sections/blog-posts';
-@import './sections/collection-list';
-@import './sections/featured-collection';
-@import './sections/image-with-text';
-
-// Templates
-@import './templates/gift_card';
-@import './templates/product';
+//
+// // Components
+// @import './components/buttons';
+// @import './components/hero-banner';
+// @import './components/icons';
+// @import './components/placeholders';
+// @import './components/responsive-images';
+//
+// // Sections
+// @import './sections/blog-posts';
+// @import './sections/collection-list';
+// @import './sections/featured-collection';
+// @import './sections/image-with-text';
+//
+// // Templates
+// @import './templates/gift_card';
+// @import './templates/product';
