--- a/src/snippets/css-variables.liquid
+++ b/src/snippets/css-variables.liquid
@@ -9,10 +9,11 @@
   {{ font_body_bold_italic | font_face }}
 
   :root {
-    --color-accent: {{ settings.color_accent }};
-    --color-body-text: {{ settings.color_body_text }};
-    --color-main-background: {{ settings.color_main_bg }};
-    --color-border: {{ settings.color_body_text | color_lighten: 50 }};
+    --color-brand: {{ settings.color_brand }};
+    --color-body-text: {{ settings.color_text }};
+    --color-body-background: {{ settings.color_background }};
+    --color-border: {{ settings.color_border }};
+    --color-alternate: {{ settings.color_alternate }};
 
     --font-heading: {{ settings.font_heading.family }}, {{ settings.font_heading.fallback_families }};
     --font-body: {{ settings.font_body.family }}, {{ settings.font_body.fallback_families }};
